static/{legacy,shared}: fix code snippet whitespace on firefox
Fixes golang/go#46770

Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/328309
Trust: Jamal Carvalho <jamal@golang.org>
Run-TryBot: Jamal Carvalho <jamal@golang.org>

--- a/static/frontend/unit/main/_doc.css
+++ b/static/frontend/unit/main/_doc.css
@@ -237,7 +237,7 @@
   outline: none;
   overflow-x: auto;
   resize: none;
-  white-space: nowrap;
+  white-space: pre;
   width: 100%;
 }
 
