--- a/static/legacy/css/unit_doc.css
+++ b/static/legacy/css/unit_doc.css
@@ -255,7 +255,7 @@
   outline: none;
   overflow-x: auto;
   resize: none;
-  white-space: nowrap;
+  white-space: pre;
   width: 100%;
 }
 
